packages/demo/src/projectlist.css
/*comment in for npm package usage*/
/* @import "../../../node_modules/@samply/lens/dist/style.css"; */
@import "../../lib/src/styles/index.css";

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  src: url('../fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf') format('truetype');
}

:root {
  --white: #ffffff;
  --ghost-white: #f8f8ff;
  --black: #000000;
  --gray: #a7a7a7;
  --light-gray: #dee2e6;
  --lightest-gray: #efefef;
  --dark-gray: #323232;
  --blue: #007bff;
  --light-blue: #007bff;
  --lightest-blue: #adc7f3;
  --dark-blue: #002d80;
  --green: #00882d;
  --light-green: #00b33c;
  --dark-green: #00591a;
  --red: #b90000;
  --light-red: #ff0000;
  --dark-red: #800000;
  --orange: #e95713;
  --light-orange: #ffa750;

  --border-radius-small: 5px;

  --gap-xxs: 5px;
  --gap-xs: 10px;
  --gap-s: 20px;
  --gap-m: 30px;
  --gap-l: 40px;
  --gap-xl: 50px;
  --gap-xxl: 60px;

  --font-size-xxs: 10px;
  --font-size-xs: 12px;
  --font-size-s: 14px;
  --font-size-m: 16px;
  --font-size-l: 18px;
  --font-size-xl: 24px;
  --font-size-xxl: 32px;

  --font-family: 'Open Sans', sans-serif;
}

/**
* Demo
*/

* {
  box-sizing: border-box;
}

body {
  margin: 0px;
  background-color: var(--ghost-white);
  font-family: var(--font-family);
}

button {
  font-family: inherit;
}

header {
  background-color: var(--ghost-white);
  position: sticky;
  top: 0px;
  z-index: 1;
  padding: var(--gap-xs);
}

.header-wrapper {
  background-color: var(--white);
  padding: var(--gap-xs);
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 1fr 1fr;
  border-radius: var(--border-radius-small);
  border: solid 1px var(--lightest-gray);
  
}

.logo img {
  height: 40px;
}

.logo-dkfz {
  justify-self: end;
}

.logo-dkfz img {
  height: 30px;
}

header h1 {
  text-align: center;
  font-size: var(--font-size-xxl);
  font-weight: lighter;
  color: var(--blue);
  margin: 0;
}


.sample-information-text {
  font-size: var(--font-size-xxs);

}


footer {
  display: flex;
  justify-content: center;
  padding: var(--gap-s);
  background-color: var(--white);
  border-radius: var(--border-radius-small);
  border: solid 1px var(--lightest-gray);
}

footer a {
  color: var(--blue);
  padding: 0 var(--gap-xs);
  border-right: solid 1px var(--blue);

}


.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: left;
    padding: var(--gap-s);
    background-color: var(--white);
    border-radius: var(--border-radius-small);
    border: solid 1px var(--lightest-gray);
    width: fit-content;
    margin: 0 auto;
}
    
p{
    text-align: left;
    width: 60%;
}

.list {
    display: flex;
    justify-content: center;
    padding-left: 10%;
    padding-right: 10%;
}

